with item for namaz time , separate class for CompassNavigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="Quran_string">Quran</string>
     <string name="namaz_string">Namaz</string>
     <string name="main_str">Main</string>
+    <string name="constant_item_text_time">Время намаза</string>
+    <string name="def_bagymdat_text">Багымдат</string>
+    <string name="def_sunrise_text">Восход</string>
+    <string name="def_peshim_text">Пешим</string>
+    <string name="def_asr_text">Аср</string>
+    <string name="def_magrib_text">Шам</string>
+    <string name="def_isha_text">Куптан</string>
+    <string name="item_bagymdat_def_time">7:11</string>
+    <string name="def_value">122:11</string>
 </resources>
